@@ -284,9 +284,12 @@ Version 20080728.334 (Sunday, July  5, 2009)
 Version ${Version} (${Date})
  - Added partial support for Microsoft Silverlight applets. Telex and VNI now
    work in standard Silverlight textboxes. However, VIQR and VIQR* are not
-   supported. Dynamically loaded Silverlight applets are not recognized.
+   supported. Also, applets written with managed code are not supported.
  - Added support for Bespin 0.4 ("Stratospheric Stratus").
  - Added support for Firefox 3.6 alpha 1.
+ - Improved word boundary detection. Even with spelling enforcement enabled,
+   Vietnamese words can be typed immediately after any punctuation, as well as
+   next to words in Japanese and other languages that do not use spaces.
  - Fixed an issue where opening the options pane would clear the ignored IDs
    list.
  - Fixed an issue where a backslash would not be treated as a word boundary.
